--- a/.ci/tests/e2e-branch/nginx.conf
+++ b/.ci/tests/e2e-branch/nginx.conf
@@ -8,6 +8,7 @@ http {
         server_name localhost;
         ssl_certificate /etc/nginx/ssl.crt;
         ssl_certificate_key /etc/nginx/ssl.key;
+        large_client_header_buffers 4 16k;
         location / {
             proxy_pass http://backend:5000;
             proxy_http_version 1.1;
