--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -149,6 +149,8 @@
   "Hangfire": {
     "EnableDashboard": false,
     "DashboardUser": "admin",
+    // Empty password prevents loggin to Dashboard even if it's suddenly enabled
+    // So, to login to Dashboard from Stage you have to both set `DashboardPassword` and  set `EnableDashboard` to 'true'
     "DashboardPassword": ""
   },
   "ExternalAuthentication": {
