--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -27,7 +27,7 @@ variables:
   # # Deployment
   # DOCKER_TAG: latest
   # ENABLE_DEPLOY: true
-  # TAG_SOURCES_DEV: dev
-  # TAG_SOURCES_PROD: prod
+  # ENABLE_DEPLOY_GREEN: false
+  # ENABLE_DEPLOY_PROD: false
   # DEPLOY_IF_STORYBOOK_FAILS: false
   # # -----------
