--- a/.ci/steps/build-import-meta-env.yml
+++ b/.ci/steps/build-import-meta-env.yml
@@ -1,18 +1,24 @@
 steps:
   - task: Cache@2
+    displayName: '[yarn]: Cache import-meta-env'
     inputs:
       key: 'import-meta-env|./yarn.lock'
       path: $(Build.SourcesDirectory)/import-meta
       cacheHitVar: IMPORT_META_ENV_CACHE
-    displayName: Cache import-meta-env
     continueOnError: true
 
-  - script: |
-      npx pkg ./node_modules/@import-meta-env/cli/bin/import-meta-env.js -t node16-linux -o ./import-meta/import-meta-env
+  - task: Bash@3
+    displayName: '[npx]: package import-meta-env/cli'
     condition: ne(variables.IMPORT_META_ENV_CACHE, 'true')
-    displayName: 'package import-meta-env/cli'
+    inputs:
+      targetType: 'inline'
+      script: |
+        npx pkg ./node_modules/@import-meta-env/cli/bin/import-meta-env.js -t node16-linux -o ./import-meta/import-meta-env
 
-  - script: |
-      ./import-meta/import-meta-env --version
-      cp  ./import-meta/import-meta-env ./publish/
-    displayName: 'copy import-meta-env'
+  - task: Bash@3
+    displayName: '[bash]: copy import-meta-env'
+    inputs:
+      targetType: 'inline'
+      script: |
+        ./import-meta/import-meta-env --version
+        cp ./import-meta/import-meta-env ./publish/
