--- a/.ci/tests/e2e-branch/docker-compose.yml
+++ b/.ci/tests/e2e-branch/docker-compose.yml
@@ -24,6 +24,6 @@ services:
       - branch.env
     volumes:
       - ./files:/files:rw
-      - ../../../webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json:/webapi/appsettings.Production.json
+      - ../../../webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json:/webapi/appsettings.Production.json:r
     expose:
       - 5000
