--- a/.ci/tests/e2e-stage.yml
+++ b/.ci/tests/e2e-stage.yml
@@ -11,6 +11,10 @@ steps:
     workingDirectory: e2e
     displayName: 'npx playwright install'
 
+  - script: yarn typecheck
+    workingDirectory: e2e
+    displayName: 'yarn typecheck'
+
   - script: |
       UNIQUE_ID=citest-${SYSTEM_JOBPOSITIONINPHASE} yarn test --shard ${SYSTEM_JOBPOSITIONINPHASE}/${SYSTEM_TOTALJOBSINPHASE}
     workingDirectory: e2e
