--- a/k8s/aks-rancher/14-letsencrypt.yaml
+++ b/k8s/aks-rancher/14-letsencrypt.yaml
@@ -2,9 +2,10 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
+  namespace: ${namespace}
 spec:
   acme:
-    email: ${EMAIL}
+    email: ${email}
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt
