--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -13,6 +13,8 @@ variables:
   - template: ./_settings/base.partial.yml
   - template: ./_settings/acr.yml
   - template: ./_settings/acr.partial.yml
+    parameters:
+      name: ${{ parameters.name }}
   - template: ./_settings/${{ parameters.name }}.yml
   - template: ./_settings/${{ parameters.name }}.partial.yml
   - name: e2e_test_shards
