--- a/k8s/aks-rancher/13-ingress.yaml
+++ b/k8s/aks-rancher/13-ingress.yaml
@@ -38,3 +38,36 @@ spec:
       # this is required for WebSockets to work (otherwise the passed protocol is wss and JWT Issuer verification fails
       # since wss://HOST.DOMAIN !== https://HOST.DOMAIN
       X-Forwarded-Proto: 'https'
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ${project}-ingress-http
+  namespace: ${namespace}
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: ${namespace}-redirect-to-https@kubernetescrd
+spec:
+  rules:
+    - host: ${hostname}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name:  ${project}-svc
+                port:
+                  name: http
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: redirect-to-https
+  namespace: ${namespace}
+spec:
+  redirectRegex:
+    regex: "^http://(.*)"
+    replacement: "https://$1"
+    permanent: true
+...
