--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,9 @@ kubeconfig.config
 k8s/aks-rancher/deploy_*
 k8s/aks-env/deploy_*
 
+scripts/secrets.rancher.stage.env
+scripts/secrets.stage.env
+scripts/stage.env
+scripts/*.env
+k8s/aks-rancher/stages/*.secrets.env
+k8s/aks-rancher/stages/*.secrets.rancher.env
