--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -34,9 +34,8 @@ variables:
   # Deployment
   DOCKER_TAG: latest
   ENABLE_DEPLOY: true
-  ENABLE_PROD_DEPLOY: false
+  ENABLE_DEPLOY_PROD: false
+  ENABLE_DEPLOY_GREEN: false
   DEPLOY_KUBERNETES: true
-  TAG_SOURCES_DEV:
-  TAG_SOURCES_PROD:
   DEPLOY_IF_STORYBOOK_FAILS: false
   # -----------
