--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -132,7 +132,7 @@ stages:
               runOnce:
                 deploy:
                   steps:
-                    - template: ./$(deploy_template)
+                    - template: ./${{ variables.deploy_template }}
                       parameters:
                         Environment: 'dev'
                         restartDeployment: true
@@ -152,7 +152,7 @@ stages:
               runOnce:
                 deploy:
                   steps:
-                    - template: ./$(deploy_template)
+                    - template: ./${{ variables.deploy_template }}
                       parameters:
                         Environment: 'green'
                         restartDeployment: true
@@ -172,7 +172,7 @@ stages:
               runOnce:
                 deploy:
                   steps:
-                    - template: ./$(deploy_template)
+                    - template: ./${{ variables.deploy_template }}
                       parameters:
                         Environment: 'prod'
                         restartDeployment: true
