--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -4,6 +4,8 @@
 # ------------------------------------
 variables:
   DUMMY: 1
+  projectName: TemplateApp
+  appName: templateapp
   ENABLE_DEPLOY_PROD: true
   # # General
   # DISABLE_BUILD: false
