--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -1,6 +1,6 @@
 #!/bin/bash
-export project="template"
-export namespace="template-STAGE"
+export project="templateapp"
+export namespace="templateapp-STAGE"
 export hostname="template.mcc-soft.de"
 
 # deployment.yaml
