--- a/k8s/aks-rancher/03-secretProviderClass.yaml
+++ b/k8s/aks-rancher/03-secretProviderClass.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ${secretName}
+  name: ${project}-secrets
   namespace: ${namespace}
 type: Opaque
 stringData:
