--- a/k8s/aks-rancher/05-postgres.yaml
+++ b/k8s/aks-rancher/05-postgres.yaml
@@ -5,22 +5,22 @@ metadata:
   name: postgres
   namespace: ${namespace}
 spec:
-   replicas: 1
-   image: postgres:17.5
-   database:
-      size: 1Gi
-   backup:
-       schedule: '0 1 * * *'
-       pvcName: backups
-       volumeMount: /var/lib/backup
-   env:
-      - name: POSTGRES_PASSWORD
-        valueFrom:
-           secretKeyRef:
-              name: ${secretName}
-              key: superUserPassword
-      - name: POSTGRES_REPLICATION_PASSWORD
-        valueFrom:
-           secretKeyRef:
-              name: ${secretName}
-              key: replicationUserPassword
+  replicas: 1
+  image: postgres:17.5
+  database:
+    size: 1Gi
+  backup:
+    schedule: '0 1 * * *'
+    pvcName: backups
+    volumeMount: /var/lib/backup
+  env:
+    - name: POSTGRES_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: ${project}-secrets
+          key: superUserPassword
+    - name: POSTGRES_REPLICATION_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: ${project}-secrets
+          key: replicationUserPassword
