--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -8,8 +8,11 @@ export containers__image="registry.gitlab.com/mcctemplateapp1/main"
 
 # configMaps.yaml
 
-EMAIL=templateapp@mcc-soft.de
-Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
-Serilog__Elastic__Url=
-Serilog__Elastic__User=
-TestApiEnabled=false
+export EMAIL=templateapp@mcc-soft.de
+export Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
+export Serilog__Elastic__Url=
+export Serilog__Elastic__User=
+export Serilog__Remote__InstanceName="${hostname}"
+export General__SiteUrl="https://${hostname}"
+export Hangfire__EnableDashboard="false"
+export TestApiEnabled="false"
