Feature/adjust ci kubernetes (#111)
* adjust kubernetes configs and CI

* K8S: readiness probe

* CI: deploy PR images to separate registry

* K8S: http ingress

* adjust CI

* fix ci

* fix ci2

* wip

* CI: use azure-deploy-kubernetes-rancher

* CI: wip

* CI: wip3

* CI: wip

* wip: CI

* wip

* k8s: wip

* wip

* wip

* wip

* wip5

* wip9

* wip

* wip

* wip

--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -4,7 +4,9 @@
 # ------------------------------------
 variables:
   DUMMY: 1
-
+  projectName: TemplateApp
+  appName: templateapp
+  ENABLE_DEPLOY_PROD: true
   # # General
   # DISABLE_BUILD: false
   # DISABLE_TESTS: false
@@ -27,7 +29,7 @@ variables:
   # # Deployment
   # DOCKER_TAG: latest
   # ENABLE_DEPLOY: true
-  # TAG_SOURCES_DEV: dev
-  # TAG_SOURCES_PROD: prod
+  # ENABLE_DEPLOY_GREEN: false
+  # ENABLE_DEPLOY_PROD: false
   # DEPLOY_IF_STORYBOOK_FAILS: false
   # # -----------
