--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -4,6 +4,8 @@
 # Change 'base.partial.yml' instead
 # ------------------------------------
 variables:
+  projectName: TemplateApp
+  appName: templateapp
   MAJOR_VERSION: 0
   MINOR_VERSION: 1
   PATCH_VERSION: $[ counter(format('{0}.{1}', variables['MAJOR_VERSION'], variables['MINOR_VERSION']), 1) ]
@@ -34,9 +36,8 @@ variables:
   # Deployment
   DOCKER_TAG: latest
   ENABLE_DEPLOY: true
-  ENABLE_PROD_DEPLOY: false
+  ENABLE_DEPLOY_PROD: false
+  ENABLE_DEPLOY_GREEN: false
   DEPLOY_KUBERNETES: true
-  TAG_SOURCES_DEV:
-  TAG_SOURCES_PROD:
   DEPLOY_IF_STORYBOOK_FAILS: false
   # -----------
