--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -1,13 +1,18 @@
-EMAIL=templateapp@mcc-soft.de
-NAMESPACE=templateapp
-Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
-Serilog__Remote__Server=logs-01.loggly.com
-Serilog__Remote__Port=443
-Serilog__Remote__Token=b2a89f6a-666d-4825-977c-79499bc958c5
-Serilog__Remote__InstanceName=dev
-Serilog__Elastic__Url=
-Serilog__Elastic__User=
-Serilog__Elastic__Password=
-TestApiEnabled=false
-POSTGRES_DATABASE=template_app
-POSTGRES_USER=postgres
+#!/bin/bash
+export project="templateapp"
+export namespace="templateapp-STAGE"
+export hostname="template.mcc-soft.de"
+
+# deployment.yaml
+export containers__image="registry.gitlab.com/mcctemplateapp1/main"
+
+# configMaps.yaml
+
+export EMAIL=templateapp@mcc-soft.de
+export Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
+export Serilog__Elastic__Url=
+export Serilog__Elastic__User=
+export Serilog__Remote__InstanceName="${hostname}"
+export General__SiteUrl="https://${hostname}"
+export Hangfire__EnableDashboard="false"
+export TestApiEnabled="false"
