--- a/.ci/azure-deploy-kubernetes-rancher.yml
+++ b/.ci/azure-deploy-kubernetes-rancher.yml
@@ -40,13 +40,13 @@ steps:
             TAG="${{ parameters.BuildAppNumber }}"
 
             FROM="${ACR_REGISTRY}/${ACR_REPOSITORY}:${TAG}"
-            TO="${ACR_REGISTRY}/release/${ACR_REPOSITORY}:${TAG}"
+            TO="${ACR_REGISTRY}/${ACR_REPOSITORY}/release:${TAG}"
 
             echo "Promoting image inside ACR:"
             echo "  ${FROM} -> ${TO}"
 
             docker buildx imagetools create --tag "${TO}" "${FROM}"
-            echo "##vso[task.setvariable variable=ACR_REPOSITORY]release/${ACR_REPOSITORY}"
+            echo "##vso[task.setvariable variable=ACR_REPOSITORY]${ACR_REPOSITORY}/release"
 
       - task: Docker@2
         displayName: '[Docker]: logout'
