--- a/k8s/aks-rancher/stages/dev.env
+++ b/k8s/aks-rancher/stages/dev.env
@@ -1,7 +1,7 @@
 #!/bin/bash
 export project="templateapp"
 export namespace="templateapp-dev"
-export hostname="template.tmp.arturdr.ru"
+export hostname="template.mcc-soft.de"
 
 # deployment.yaml
 export containers__image="registry.gitlab.com/mcctemplateapp1/main/ci"
