--- a/k8s/aks-rancher/stages/prod.env
+++ b/k8s/aks-rancher/stages/prod.env
@@ -1,7 +1,7 @@
 #!/bin/bash
 export project="templateapp"
 export namespace="templateapp-prod"
-export hostname="template.mcc-soft.de"
+export hostname="template.tmp.arturdr.ru"
 
 # deployment.yaml
 export containers__image="registry.gitlab.com/mcctemplateapp1/main/release"
