CI: remove containers__image from stage configs

--- a/k8s/aks-rancher/12-deployment.yaml
+++ b/k8s/aks-rancher/12-deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: ${project}
-          image: ${containers__image}
+          image: ${ACR_REGISTRY}/${ACR_REPOSITORY}:latest
           envFrom:
             - configMapRef:
                 name: ${project}-configs
